syntax = "proto3";

service bitcoin {
  rpc GenerateToAddress(GenerateToAddressRequest) returns (GenerateToAddressResponse) {}
}

message GenerateToAddressRequest {
    string address = 1;
    uint32 numOfBlocks = 2;
}
message GenerateToAddressResponse {
  repeated string hashes = 1;
}